grails-app/assets/stylesheets/sass/partials/_task.scss
.display-flex {
    display: flex;
}

.center {
    text-align: center;
}

.uppercase {
    text-transform: uppercase;
}

.capitalize {
    text-transform: capitalize;
}

.visible-hidden {
    visibility: hidden;
}

.tasks-list {
    padding: 30px;
}

.bold {
    font-weight: 700;
}

.items-title {
    padding: 12px 30px;
    border-bottom: 3px solid $base-color-white-grey;
    color: $base-color-dark-grey;

    h4 {
        margin-bottom: 7px;
        font-weight: 400;
        font-size: 15px;
    }

    .active-items {
        &:before {
            display: inline-block;
            padding-right: 16px;
            content: '\f3fe';
            font-weight: lighter;
            font-size: 26px;
            font-family: ionicons;
            vertical-align: middle;

        }
    }

    .closed-items {
        &:before {
            display: inline-block;
            padding-right: 16px;
            content: '\f463';
            font-weight: lighter;
            font-size: 26px;
            font-family: ionicons;
            vertical-align: middle;

        }
    }

    .scheduled_items {

        &:before {
            display: inline-block;
            padding-right: 16px;
            content: '\f3c7';
            font-weight: lighter;
            font-size: 26px;
            font-family: ionicons;
            vertical-align: sub;

        }
    }
}

.list-bottom {
    border-bottom: 20px solid $base-color-white-grey;
}

.no-item {
    padding: 3% 0;

    p {
        font-weight: 300;
    }
}

@mixin auto-padding($row) {
    padding: 0 -8 * $row + 46 + px
}

// box item for task
.box-item {
    display: inline-block;
    position: relative;
    width: 314px;
    margin-right: 40px;
    margin-bottom: 40px;
    border-top: 5px $base-color-mid-grey solid;
    box-shadow: 0 0 0.5em $base-font-color;

    h5 {
        color: $base-color-light-black;
    }

    .small-font {
        font-size: 10pt;
    }

    .middle-font {
        font-size: 11pt;
    }

    .number-font {
        font-size: 14px;
    }

    // change background and color according to status
    &.pending {
        border-color: $base-color-orange;

        .box-item-content {
            color: $base-color-orange;
        }

        .box-item-footer {
            background-color: $base-color-orange;

            &:before {
                content: 'PENDING';
            }
        }
    }

    &.overdue {
        border-color: $base-color-task-overdue;

        .box-item-content {
            color: $base-color-task-overdue;
        }

        .box-item-footer {
            background-color: $base-color-task-overdue;

            &:before {
                content: 'OVERDUE';
            }
        }
    }

    &.complete {
        border-color: $base-color-green;

        .box-item-content {
            color: $base-color-green;
        }

        .box-item-footer {
            background-color: $base-color-green;

            &:before {
                content: 'COMPLETED';
            }
        }
    }

    &.expired {
        border-color: $base-color-grey-expired;
        background-color: $base-color-archived-bg;

        .box-item-content {
            color: $base-color-grey-expired;
        }

        .box-item-footer {
            background-color: $base-color-grey-expired;

            &:before {
                content: 'EXPIRED';
            }
        }
    }

}

.box-item-header {
    height: 75px;
    padding: 6px 12px;
    color: $base-font-grey-dark;
    font-size: 16px;
    box-shadow: 0 0 0.5em $base-font-color;
    overflow: hidden;

    .item-title {
        padding: 6px 0;
    }

    .number-id {
        display: inline-block;
        padding-left: 14px;
        font-size: 15px;
        color: $base-light-grey-color;
    }

    .task-date {
        font-weight: 600;
        color: $base-color-medium-black;
    }

    .label-space {
        padding-right: 4px;
    }
}

.box-item-content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;

    display: -ms-flexbox;
    -ms-flex-align: center;
    -ms-flex-pack: center;
    -ms-flex-wrap: wrap;

    height: 190px;
    padding-left: 10px;
    background-color: $base-color-archived-bg;
    box-shadow: 0 0 0.5em $base-font-color;

    .sub-item {
        display: inline-block;
        padding-right: 30px;
        text-align: center;
    }

    .score-number {
        display: inline-block;
        padding-bottom: 2px;
        font-size: 19px;
        color: $base-color-green;
    }

    .score-label {
        text-transform: capitalize;
        color: $base-color-medium-black;
        font-size: 14px;
        font-weight: 600;
    }
}

.box-item-footer {
    padding: 7px 12px;
    background: $base-color-mid-grey;
    color: $base-color-white;
    position: relative;

    &:before {
        width: 10px;
        padding: 5px 5px 0;
        content: 'SCHEDULED';
        font-size: 10pt;
    }

    .task-date {
        font-size: 13px;
    }

    .view-results {
        float: right;
        margin: 1px 5px 0 0;
        color: $base-color-white;
        position: relative;

        &:before {
            position: absolute;
            top: 4px;
            left: -12px;
            content: '\f425';
            font-family: ionicons;
            font-size: 13px;
        }

        span {
            font-size: 11px;
        }

        &:hover span {
            text-decoration: underline;
        }
    }

    .operation {
        position: absolute;
        top: 0;
        right: 0;
        width: 42px;
        height: 100%;
        border-left: 1px solid $base-color-white;
        font-size: 0;
        color: $base-color-white-grey-dark;
        cursor: pointer;
        text-align: center;
        z-index: 10;

        &:before {
            position: relative;
            top: 7px;
            content: '';
            font-family: ionicons;
            font-size: 18px;
        }

        &:hover {
            color: $base-color-white;
        }

        &:hover + .tip {
            display: block;
        }
    }

    .begin-task {
        right: 42px;
        text-decoration: none;

        &:before {
            content: '\f12c';
        }
    }

    .call-task {
        right: 42px;

        &:before {
            content: '\f4b8';
        }
    }

    .delete {
        &:before {
            content: '\f4c4';
        }
    }

    .tip {
        display: none;
        position: absolute;
        right: 1px;
        top: -23px;
        height: 20px;
        line-height: 20px;
        background: $base-color-black;
        text-align: center;
        font-size: 0;

        &:after {
            content: '\f104';
            font-family: ionicons;
            font-size: 12px;
            position: absolute;
            left: 42%;
            top: 12px;
            color: $base-color-black;
        }

        span {
            display: inline-block;
            min-width: 25px;
            font-size: 12px;
            padding: 0 4px;
        }
    }

    .begin-tip, .call-tip {
        right: 49px;
    }

    .complete-score {
        display: table-cell;
        vertical-align: middle;
        font-size: 12px;
    }

    .score {
        display: inline-block;
        padding: 0 6px;

        & + .score {
            border-left: 1px $base-color-bg-head solid;
        }

        &.row-2-padding {
            @include auto-padding(2)
        }

        &.row-3-padding {
            @include auto-padding(3)
        }

        &.row-4-padding {
            @include auto-padding(4)
        }

        &.row-5-padding {
            @include auto-padding(5)
        }
    }
}

// box item archived
.archived {

    .items-title {
        color: $base-color-dark-gray;
    }

    .no-item {
        color: $base-color-dark-gray;
    }

    .box-item {
        border-color: $base-font-color;

        .box-item-footer {
            background: $base-font-color;
        }

        .disabled {
            background-color: transparent;
            &:hover,
            &:focus {
                border: 1px $base-color-bg-head solid;
                background-color: transparent;
                color: $base-color-bg-head;
            }
        }
    }

    .box-item-content {
        color: $base-font-color;

        .item-context {
            color: $base-font-color;
        }

        .complete-score {
            background: $base-font-grey-dark;
        }

    }
}

.new-flag-ribbon-wrapper {
    width: 89px;
    height: 100px;
    overflow: hidden;
    position: absolute;
    top: -9px;
    right: -6px;

    .ribbon {
        font-size: 12px;
        font-weight: 700;
        text-align: center;
        -webkit-transform: rotate(45deg);
        -moz-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
        -o-transform: rotate(45deg);
        position: relative;
        padding: 5px 0;
        left: -5px;
        top: 21px;
        width: 120px;
        background-color: #f93220;
        color: white;

        &:before,
        &:after {
            content: "";
            border-top: 3px solid #a32317;
            border-left: 3px solid transparent;
            border-right: 3px solid transparent;
            position: absolute;
            bottom: -3px;
        }

        &:before {
            left: 0;
        }

        &:after {
            right: 0;
        }
    }
}

.fill-questionnaire-dialog {
    text-align: center;
    font-size: 14px;

    .form-group {
        width: 72%;
        display: inline-block;
        margin: 10px 0;
    }

    .description {
        color: #000;
    }

    .date-picker {
        width: 272px;
    }
}

//attention tip
.box-item {
    .attention-menu {
        text-align: center;
        font-size: 13px;
    }

    .ui-widget-content {
        border: 0;

        .ui-state-focus {
            color: $base-color-dark-grey;
        }
    }

    ul.ui-menu {
        padding: 24px 4px 10px;
        background-color: $base-color-white;
        box-shadow: 0 0 0.5em $base-font-color;
        border-radius: 5px;
    }

}

.attention {
    position: absolute;
    top: 0;
    right: 0;

    .attention-icon {
        position: absolute;
        top: -25px;
        right: -19px;
        width: 45px;
        height: 45px;
        background: image-url('patients/attention.png', false, false) no-repeat center right !important;
        z-index: 110;
    }

    .title {
        padding-bottom: 4px;
        font-weight: 600;
    }

    .sub-title {
        padding-bottom: 4px;
        font-size: 13px;
    }

    .btn {
        padding: 4px 20px;
        font-size: 12px;
    }

}

//filter
.quick-filter {
}

.quick-filter-label {
    display: inline-block;
    padding-right: 10px;
    margin: 0 0 10px 0;
    font-size: 15px;
    font-weight: bold;
    line-height: 1.6;
}

.quick-filter-button {
    border-radius: 3px 3px 3px 3px;
    display: inline-block;
    line-height: 1;
    margin: 0 5px 0 0;
    padding: 5px 8px;

    &.active {
        color: $base-color-white;
        background-color: $base-color-dark-grey;
    }

}

